--- a/Trabalho/bin/too/trabalho/paulo/app/AtividadeFisica.fxml
+++ b/Trabalho/bin/too/trabalho/paulo/app/AtividadeFisica.fxml
@@ -84,8 +84,8 @@
                         </GridPane>
                         <HBox alignment="CENTER_LEFT" layoutX="192.0" layoutY="366.0" prefHeight="34.0" prefWidth="144.0">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#remove" text="Remover" />
-                              <Button disable="true" mnemonicParsing="false" text="Atualizar">
+                              <Button fx:id="btnRemoveAluno" disable="true" mnemonicParsing="false" onAction="#remove" text="Remover" />
+                              <Button fx:id="btnAtualizaAluno" disable="true" mnemonicParsing="false" text="Atualizar">
                                  <HBox.margin>
                                     <Insets left="5.0" />
                                  </HBox.margin>
@@ -206,7 +206,7 @@
                         </GridPane>
                         <HBox alignment="CENTER" layoutX="185.0" layoutY="290.0" prefHeight="34.0" prefWidth="144.0">
                            <children>
-                              <Button disable="true" mnemonicParsing="false" text="Atualizar">
+                              <Button disable="true" mnemonicParsing="false" onAction="#atualiza" text="Atualizar">
                                  <HBox.margin>
                                     <Insets left="5.0" />
                                  </HBox.margin>
@@ -221,6 +221,91 @@
                               <TextField fx:id="tfDistancia1" promptText="Distância" GridPane.rowIndex="3" />
                               <TextField fx:id="tfCalorias1" promptText="Calorias Perdidas" GridPane.rowIndex="4" />
                               <TextField fx:id="tfPassos1" promptText="Passos" GridPane.rowIndex="5" />
+                           </children>
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.6666259765625" minWidth="10.0" prefWidth="132.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                        </GridPane>
+                     </children>
+                  </AnchorPane>
+               </items>
+            </SplitPane>
+            <SplitPane fx:id="edicaoAtividadeCompleta" dividerPositions="0.6397807361002349" layoutY="1.0" prefHeight="673.0" prefWidth="1279.0" visible="false">
+               <items>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="671.0" prefWidth="470.0">
+                     <children>
+                        <TableView fx:id="tabelaAtivCompleta" layoutY="1.0" onMouseClicked="#obtemAtivCompleta" prefHeight="672.0" prefWidth="840.0">
+                           <columns>
+                              <TableColumn fx:id="colAtividadeCompleta" prefWidth="104.0" text="Atividade" />
+                              <TableColumn fx:id="colTempoCompleta" prefWidth="60.0" text="Tempo" />
+                              <TableColumn fx:id="colDuracaoCompleta" prefWidth="57.0" text="Duração" />
+                              <TableColumn fx:id="colDistanciaCompleta" prefWidth="62.0" text="Distância" />
+                              <TableColumn fx:id="colCaloriasCompleta" prefWidth="58.0" text="Calorias" />
+                              <TableColumn fx:id="colPassosCompleta" prefWidth="48.0" text="Passos" />
+                              <TableColumn fx:id="colVelMed" prefWidth="112.0" text="Velocidade Média" />
+                              <TableColumn fx:id="colVelMax" prefWidth="121.0" text="Velocidade Máxima" />
+                              <TableColumn fx:id="colMaiorElv" prefWidth="96.0" text="Maior Elevação" />
+                              <TableColumn fx:id="colMenorElv" prefWidth="97.0" text="Menor Elevação" />
+                           </columns>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="671.0" prefWidth="526.0">
+                     <children>
+                        <GridPane fx:id="gridEdicao221" layoutX="151.0" layoutY="101.0" prefHeight="294.0" prefWidth="155.0">
+                           <children>
+                              <TextField fx:id="tfAtividadeC" promptText="Atividade" />
+                              <TextField fx:id="tfTempoC" promptText="Tempo" GridPane.rowIndex="1" />
+                              <TextField fx:id="tfDuracaoC" promptText="Duração" GridPane.rowIndex="2" />
+                              <TextField fx:id="tfDistanciaC" promptText="Distância" GridPane.rowIndex="3" />
+                              <TextField fx:id="tfCaloriasC" promptText="Calorias Perdidas" GridPane.rowIndex="4" />
+                              <TextField fx:id="tfPassosC" promptText="Passos" GridPane.rowIndex="5" />
+                              <TextField fx:id="tfVelMed" promptText="Velocidade Média" GridPane.rowIndex="6" />
+                              <TextField fx:id="tfVelMax" promptText="Velocidade Máxima" GridPane.rowIndex="7" />
+                              <TextField fx:id="tfMaiorEl" promptText="Maior Elevação" GridPane.rowIndex="8" />
+                              <TextField fx:id="tfMenorEl" promptText="Menor Elevação" GridPane.rowIndex="9" />
+                           </children>
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.6666259765625" minWidth="10.0" prefWidth="132.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints maxHeight="29.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                        </GridPane>
+                        <HBox alignment="CENTER" layoutX="157.0" layoutY="411.0" prefHeight="34.0" prefWidth="144.0">
+                           <children>
+                              <Button disable="true" mnemonicParsing="false" onAction="#atualiza" text="Atualizar">
+                                 <HBox.margin>
+                                    <Insets left="5.0" />
+                                 </HBox.margin>
+                              </Button>
+                           </children>
+                        </HBox>
+                        <GridPane fx:id="gridEdicao2211" layoutX="185.0" layoutY="101.0" prefHeight="178.0" prefWidth="176.0" visible="false">
+                           <children>
+                              <TextField fx:id="tfAtividade11" promptText="Atividade" />
+                              <TextField fx:id="tfTempo11" promptText="Tempo" GridPane.rowIndex="1" />
+                              <TextField fx:id="tfDuracao11" promptText="Duração" GridPane.rowIndex="2" />
+                              <TextField fx:id="tfDistancia11" promptText="Distância" GridPane.rowIndex="3" />
+                              <TextField fx:id="tfCalorias11" promptText="Calorias Perdidas" GridPane.rowIndex="4" />
+                              <TextField fx:id="tfPassos11" promptText="Passos" GridPane.rowIndex="5" />
                            </children>
                            <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.6666259765625" minWidth="10.0" prefWidth="132.0" />
