--- a/Trabalho/src/too/trabalho/paulo/app/AtividadeFisica.fxml
+++ b/Trabalho/src/too/trabalho/paulo/app/AtividadeFisica.fxml
@@ -13,6 +13,62 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="too.trabalho.paulo.app.AtividadeFisicaController">
    <children>
+      <AnchorPane fx:id="telaPesquisa" layoutX="1.0" layoutY="27.0" prefHeight="671.0" prefWidth="1280.0">
+         <children>
+            <GridPane fx:id="gridBuscaAluno" layoutX="320.0" layoutY="29.0" prefHeight="90.0" prefWidth="317.0" visible="false">
+              <columnConstraints>
+                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Digite o nome do aluno: ">
+                     <GridPane.margin>
+                        <Insets right="5.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <TextField fx:id="tfPesquisa" promptText="Nome" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" onAction="#buscaAluno" text="Buscar" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               </children>
+            </GridPane>
+            <TextArea fx:id="tfBusca" editable="false" layoutX="211.0" layoutY="108.0" prefHeight="463.0" prefWidth="582.0" visible="false" />
+            <GridPane fx:id="gridBuscaAtividade" layoutX="330.0" layoutY="39.0" prefHeight="113.0" prefWidth="317.0" visible="false">
+               <children>
+                  <Label text="Digite o nome da atividade">
+                     <GridPane.margin>
+                        <Insets right="5.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <TextField fx:id="tfPesquisaAtividade" promptText="Atividade" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" onAction="#buscaAtividade" text="Buscar" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <DatePicker fx:id="dataPesquisaInicio" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <DatePicker fx:id="dataPesquisaFinal" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label text="Início: " GridPane.rowIndex="1" />
+                  <Label text="Final: " GridPane.rowIndex="2" />
+               </children>
+               <columnConstraints>
+                  <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+            </GridPane>
+            <TableView fx:id="tabelaPesquisa" layoutX="117.0" layoutY="197.0" prefHeight="473.0" prefWidth="918.0" visible="false">
+              <columns>
+                <TableColumn fx:id="colPesq1" prefWidth="75.0" text="Atividade" />
+                <TableColumn fx:id="colPesq2" prefWidth="75.0" text="Duração" />
+              </columns>
+            </TableView>
+         </children>
+      </AnchorPane>
       <AnchorPane fx:id="telaEdicao" layoutY="23.0" prefHeight="679.0" prefWidth="1280.0" visible="false">
          <children>
             <SplitPane fx:id="edicaoAluno" dividerPositions="0.5755677368833203" layoutY="1.0" prefHeight="673.0" prefWidth="1279.0" visible="false">
@@ -153,7 +209,7 @@
                         </GridPane>
                         <HBox alignment="CENTER_LEFT" layoutX="197.0" layoutY="235.0" prefHeight="34.0" prefWidth="144.0">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#remove" text="Remover" />
+                              <Button fx:id="btnRemoveUsuario" disable="true" mnemonicParsing="false" onAction="#remove" text="Remover" />
                               <Button disable="true" mnemonicParsing="false" text="Atualizar">
                                  <HBox.margin>
                                     <Insets left="5.0" />
@@ -415,7 +471,13 @@
                   <MenuItem mnemonicParsing="false" onAction="#edicaoUsers" text="Usuários" />
               </items>
             </Menu>
-          <Menu mnemonicParsing="false" text="Pesquisa">
+            <Menu mnemonicParsing="false" text="Pesquisa">
+              <items>
+                <MenuItem mnemonicParsing="false" onAction="#pesquisaAluno" text="Pesquisar alunos" />
+                  <MenuItem mnemonicParsing="false" onAction="#pesquisaAtividade" text="Pesquisar atividades" />
+              </items>
+            </Menu>
+          <Menu mnemonicParsing="false" text="Relatórios">
                <items>
                   <MenuItem mnemonicParsing="false" onAction="#pesquisaClientes" text="Relatório detalhado" />
                   <MenuItem mnemonicParsing="false" onAction="#relatorioDetalhado" text="Relatório completo" />
